fix 'Does not open external anchors using rel=noopener'

--- a/src/styles/less/variables.less
+++ b/src/styles/less/variables.less
@@ -5,28 +5,28 @@
 @html-line-height: 1.428571429;
 @body-bg: @bg-color-light;
 @body-font-color: lighten(@dark-color, 5%);
-@font-size: .7rem;
-@font-size-sm: .6rem;
-@font-size-lg: .8rem;
+@font-size: 0.7rem;
+@font-size-sm: 0.6rem;
+@font-size-lg: 0.8rem;
 @line-height: 1rem;
 
 // Fonts
 // Credit: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
-@base-font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
-@mono-font-family: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace;
-@fallback-font-family: "Helvetica Neue", sans-serif;
-@cjk-zh-font-family: @base-font-family, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", @fallback-font-family;
-@cjk-jp-font-family: @base-font-family, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "Yu Gothic", YuGothic, Meiryo, @fallback-font-family;
-@cjk-ko-font-family: @base-font-family, "Malgun Gothic", @fallback-font-family;
+@base-font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto;
+@mono-font-family: 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', Menlo, Courier, monospace;
+@fallback-font-family: 'Helvetica Neue', sans-serif;
+@cjk-zh-font-family: @base-font-family, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', @fallback-font-family;
+@cjk-jp-font-family: @base-font-family, 'Hiragino Sans', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', YuGothic, Meiryo, @fallback-font-family;
+@cjk-ko-font-family: @base-font-family, 'Malgun Gothic', @fallback-font-family;
 @body-font-family: @base-font-family, @fallback-font-family;
 
 // Unit sizes
-@unit-o: .05rem;
-@unit-h: .1rem;
-@unit-1: .2rem;
-@unit-2: .4rem;
-@unit-3: .6rem;
-@unit-4: .8rem;
+@unit-o: 0.05rem;
+@unit-h: 0.1rem;
+@unit-1: 0.2rem;
+@unit-2: 0.4rem;
+@unit-3: 0.6rem;
+@unit-4: 0.8rem;
 @unit-5: 1rem;
 @unit-6: 1.2rem;
 @unit-7: 1.4rem;
@@ -47,7 +47,7 @@
 @control-padding-v: (@control-size - @line-height) / 2 - @border-width;
 @control-padding-v-sm: (@control-size-sm - @line-height) / 2 - @border-width;
 @control-padding-v-lg: (@control-size-lg - @line-height) / 2 - @border-width;
-@control-icon-size: .7rem;
+@control-icon-size: 0.7rem;
 @control-min-width: 180px;
 @control-max-width: 320px;
 @border-radius: @unit-h;
