--- a/src/styles/less/custom.less
+++ b/src/styles/less/custom.less
@@ -1,7 +1,8 @@
 /*! Spectre.css | MIT License | github.com/picturepan2/spectre */
 
+// Core variables and mixins
 @import 'variables.less';
-@import 'mixins.less';
+@import '../../../node_modules/spectre.css/src/mixins.less';
 
 // Reset and dependencies
 @import '../../../node_modules/spectre.css/src/normalize.less';
