--- a/src/styles/less/custom.less
+++ b/src/styles/less/custom.less
@@ -6,59 +6,59 @@
 
 // Reset and dependencies
 @import '../../../node_modules/spectre.css/src/normalize.less';
-@import '../../../node_modules/spectre.css/src/base.less';
+@import 'base.less';
 
 // Core classes
-@import '../../../node_modules/spectre.css/src/typography.less';
-@import '../../../node_modules/spectre.css/src/asian.less';
-@import '../../../node_modules/spectre.css/src/tables.less';
+@import 'typography.less';
+//@import '../../../node_modules/spectre.css/src/asian.less';
+//@import '../../../node_modules/spectre.css/src/tables.less';
 @import '../../../node_modules/spectre.css/src/buttons.less';
 @import '../../../node_modules/spectre.css/src/forms.less';
 @import '../../../node_modules/spectre.css/src/labels.less';
-@import '../../../node_modules/spectre.css/src/codes.less';
+//@import '../../../node_modules/spectre.css/src/codes.less';
 @import '../../../node_modules/spectre.css/src/media.less';
 
 // Layout../../../node_modules/spectre.css/
 @import '../../../node_modules/spectre.css/src/layout.less';
-@import '../../../node_modules/spectre.css/src/navbar.less';
-@import '../../../node_modules/spectre.css/src/panels.less';
-@import '../../../node_modules/spectre.css/src/empty.less';
+//@import '../../../node_modules/spectre.css/src/navbar.less';
+//@import '../../../node_modules/spectre.css/src/panels.less';
+//@import '../../../node_modules/spectre.css/src/empty.less';
 
 // Components
 @import '../../../node_modules/spectre.css/src/accordions.less';
-@import '../../../node_modules/spectre.css/src/autocomplete.less';
+//@import '../../../node_modules/spectre.css/src/autocomplete.less';
 @import '../../../node_modules/spectre.css/src/avatars.less';
-@import '../../../node_modules/spectre.css/src/badges.less';
-@import '../../../node_modules/spectre.css/src/breadcrumbs.less';
-@import '../../../node_modules/spectre.css/src/bars.less';
+//@import '../../../node_modules/spectre.css/src/badges.less';
+//@import '../../../node_modules/spectre.css/src/breadcrumbs.less';
+//@import '../../../node_modules/spectre.css/src/bars.less';
 @import '../../../node_modules/spectre.css/src/cards.less';
-@import '../../../node_modules/spectre.css/src/chips.less';
-@import '../../../node_modules/spectre.css/src/dropdowns.less';
-@import '../../../node_modules/spectre.css/src/menus.less';
+//@import '../../../node_modules/spectre.css/src/chips.less';
+//@import '../../../node_modules/spectre.css/src/dropdowns.less';
+//@import '../../../node_modules/spectre.css/src/menus.less';
 @import '../../../node_modules/spectre.css/src/modals.less';
-@import '../../../node_modules/spectre.css/src/navs.less';
-@import '../../../node_modules/spectre.css/src/pagination.less';
-@import '../../../node_modules/spectre.css/src/popovers.less';
-@import '../../../node_modules/spectre.css/src/steps.less';
-@import '../../../node_modules/spectre.css/src/tabs.less';
+//@import '../../../node_modules/spectre.css/src/navs.less';
+//@import '../../../node_modules/spectre.css/src/pagination.less';
+//@import '../../../node_modules/spectre.css/src/popovers.less';
+//@import '../../../node_modules/spectre.css/src/steps.less';
+//@import '../../../node_modules/spectre.css/src/tabs.less';
 @import '../../../node_modules/spectre.css/src/tiles.less';
-@import '../../../node_modules/spectre.css/src/toasts.less';
-@import '../../../node_modules/spectre.css/src/tooltips.less';
+//@import '../../../node_modules/spectre.css/src/toasts.less';
+//@import '../../../node_modules/spectre.css/src/tooltips.less';
 
 // Utility classes
 @import '../../../node_modules/spectre.css/src/animations.less';
 @import '../../../node_modules/spectre.css/src/utilities.less';
 
 // Experimentals
-@import '../../../node_modules/spectre.css/src/calendars.less';
-@import '../../../node_modules/spectre.css/src/carousels.less';
-@import '../../../node_modules/spectre.css/src/comparison-sliders.less';
-@import '../../../node_modules/spectre.css/src/filters.less';
-@import '../../../node_modules/spectre.css/src/meters.less';
-@import '../../../node_modules/spectre.css/src/parallax.less';
-@import '../../../node_modules/spectre.css/src/progress.less';
-@import '../../../node_modules/spectre.css/src/sliders.less';
-@import '../../../node_modules/spectre.css/src/timelines.less';
+//@import '../../../node_modules/spectre.css/src/calendars.less';
+//@import '../../../node_modules/spectre.css/src/carousels.less';
+//@import '../../../node_modules/spectre.css/src/comparison-sliders.less';
+//@import '../../../node_modules/spectre.css/src/filters.less';
+//@import '../../../node_modules/spectre.css/src/meters.less';
+//@import '../../../node_modules/spectre.css/src/parallax.less';
+//@import '../../../node_modules/spectre.css/src/progress.less';
+//@import '../../../node_modules/spectre.css/src/sliders.less';
+//@import '../../../node_modules/spectre.css/src/timelines.less';
 
 // Icons
-@import '../../../node_modules/spectre.css/src/icons.less';
+//@import '../../../node_modules/spectre.css/src/icons.less';
