--- a/src/styles/less/variables.less
+++ b/src/styles/less/variables.less
@@ -1,4 +1,5 @@
 // Core variables
+@import 'fonts';
 
 // Global
 @html-font-size: 20px;
@@ -12,13 +13,16 @@
 
 // Fonts
 // Credit: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
-@base-font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto;
+//@base-font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto;
+@base-font-family: 'Open Sans';
+@base-title-font-family: 'Comfortaa';
 @mono-font-family: 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', Menlo, Courier, monospace;
-@fallback-font-family: 'Helvetica Neue', sans-serif;
+@fallback-font-family: sans-serif;
 @cjk-zh-font-family: @base-font-family, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', @fallback-font-family;
 @cjk-jp-font-family: @base-font-family, 'Hiragino Sans', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', YuGothic, Meiryo, @fallback-font-family;
 @cjk-ko-font-family: @base-font-family, 'Malgun Gothic', @fallback-font-family;
 @body-font-family: @base-font-family, @fallback-font-family;
+@title-font-family: @base-title-font-family, @fallback-font-family;
 
 // Unit sizes
 @unit-o: 0.05rem;
@@ -50,13 +54,13 @@
 @control-icon-size: 0.7rem;
 @control-min-width: 180px;
 @control-max-width: 320px;
-@border-radius: @unit-h;
+@border-radius: @unit-1;
 @border-width: @unit-o;
 @border-width-lg: @unit-h;
 
 // Colors
 // Core colors
-@primary-color: #526e45;
+@primary-color: #5c5edc;
 @primary-color-dark: darken(@primary-color, 3%);
 @primary-color-light: lighten(@primary-color, 3%);
 @secondary-color: lighten(@primary-color, 40%);
@@ -67,7 +71,7 @@
 @link-color-dark: darken(@link-color, 5%);
 
 // Gray colors
-@dark-color: #454d5d;
+@dark-color: #2a2b30;
 @light-color: #fff;
 @gray-color: lighten(@dark-color, 40%);
 @gray-color-dark: darken(@gray-color, 20%);
