--- a/src/styles/less/base.less
+++ b/src/styles/less/base.less
@@ -9,7 +9,7 @@ html {
   box-sizing: border-box;
   font-size: @html-font-size;
   line-height: @html-line-height;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;/*
 
   @media screen and (max-width: @size-md) {
     font-size: 18px;
@@ -21,7 +21,7 @@ html {
 
   @media screen and (max-width: @size-xs) {
     font-size: 14px;
-  }
+  }*/
 }
 
 body {
