--- a/src/styles/less/custom.less
+++ b/src/styles/less/custom.less
@@ -47,7 +47,13 @@
 
 // Utility classes
 @import '../../../node_modules/spectre.css/src/animations.less';
-@import '../../../node_modules/spectre.css/src/utilities.less';
+@import '../../../node_modules/spectre.css/src/utilities/colors.less';
+@import '../../../node_modules/spectre.css/src/utilities/display.less';
+@import '../../../node_modules/spectre.css/src/utilities/divider.less';
+//@import '../../../node_modules/spectre.css/src/utilities/loading.less';
+@import '../../../node_modules/spectre.css/src/utilities/position.less';
+//@import '../../../node_modules/spectre.css/src/utilities/shapes.less';
+@import '../../../node_modules/spectre.css/src/utilities/text.less';
 
 // Experimentals
 //@import '../../../node_modules/spectre.css/src/calendars.less';
