--- a/src/styles/less/base.less
+++ b/src/styles/less/base.less
@@ -9,19 +9,7 @@ html {
   box-sizing: border-box;
   font-size: @html-font-size;
   line-height: @html-line-height;
-  -webkit-tap-highlight-color: transparent;/*
-
-  @media screen and (max-width: @size-md) {
-    font-size: 18px;
-  }
-
-  @media screen and (max-width: @size-sm) {
-    font-size: 16px;
-  }
-
-  @media screen and (max-width: @size-xs) {
-    font-size: 14px;
-  }*/
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
