--- a/src/styles/less/typography.less
+++ b/src/styles/less/typography.less
@@ -21,36 +21,60 @@ h6 {
 .h5,
 .h6 {
   font-weight: 500;
-  }
+}
 
 h1,
 .h1 {
   font-size: 2rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 32px;
+  }
 }
 
 h2,
 .h2 {
   font-size: 1.6rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 25px;
+  }
 }
 
 h3,
 .h3 {
   font-size: 1.4rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 22px;
+  }
 }
 
 h4,
 .h4 {
   font-size: 1.2rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 19px;
+  }
 }
 
 h5,
 .h5 {
   font-size: 1rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 16px;
+  }
 }
 
 h6,
 .h6 {
   font-size: 0.8rem;
+
+  @media screen and (max-width: 480px) {
+    font-size: 12px;
+  }
 }
 
 // Paragraphs
