--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -168,6 +168,8 @@ i:not([class*='accord-icon']) {
 }
 
 .tile-content {
+  width: 100%;
+
   @media screen and (max-width: 600px) {
     text-align: center;
   }
