--- a/src/styles/less/custom.less
+++ b/src/styles/less/custom.less
@@ -42,7 +42,7 @@
 //@import '../../../node_modules/spectre.css/src/steps.less';
 //@import '../../../node_modules/spectre.css/src/tabs.less';
 @import '../../../node_modules/spectre.css/src/tiles.less';
-//@import '../../../node_modules/spectre.css/src/toasts.less';
+@import '../../../node_modules/spectre.css/src/toasts.less';
 //@import '../../../node_modules/spectre.css/src/tooltips.less';
 
 // Utility classes
