--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -93,11 +93,6 @@ i:not([class*='accord-icon']) {
   padding: 1rem;
 }
 
-.card-image,
-.card-header {
-  border: 1px solid #000;
-}
-
 .text-dark {
   color: #1c1d22;
 }
@@ -129,7 +124,6 @@ i:not([class*='accord-icon']) {
   width: 4rem;
   fill: $primary-color;
   transition: fill 0.3s ease-out;
-  border: 1px solid #000;
 
   @media screen and (max-width: 480px) {
     height: 48px;
@@ -196,4 +190,16 @@ i:not([class*='accord-icon']) {
 
 .accordion-header {
   padding-left: 0 !important;
+}
+
+.toast {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+#toast {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
